<resources>
    <string name="app_name">Tienda Virtual- Pruni</string>
    <string name="default_web_client_id">699097416713-3isj89rg2th3jkie66nm6a6qcvth1t9k.apps.googleusercontent.com</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="tipoVendedor">Vendedor</string>
    <string name="tipoCliente">Cliente</string>

    <!--Navigation vendedor-->


    <string name="op_inicio_v">Inicio</string>
    <string name="op_mitienda_v">Mi tienda</string>
    <string name="op_categorias_V">Categorias</string>
    <string name="op_resenia_v">Reseñas</string>
    <string name="op_cerrarsesion_v">Cerrar Sesión</string>
    <!--Navigation Cliente-->
    <string name="op_inicio_c">Inicio</string>
    <string name="op_mi_perfil_c">Mi Perfil</string>
    <string name="op_cerrar_sesion_c">Cerrar Sesión</string>
    <!--Botton Nav Cliente-->


    <!--Navigation Cliente-->

    <string name="op_mis_productos">Mis Productos</string>
    <string name="op_mis_ordenes_v">Mis  Ordenes</string>
    <!--Bottom navi Cliente-->
    <string name="op_tienda_c">Tienda</string>
    <string name="op_mis_ordenes_c">Mis Órdenes</string>


    <string name="txt_bienvenido">Bienvenid@</string>
    <!--Registro cliente-->
    <string name="txtRegistroc">Registro de cliente</string>
    <string name="etNombres">Nombres Completos</string>
    <string name="etEmail">Email</string>
    <string name="btnLoginC">Ingresar</string>
    <string name="tvRegistrarC">Registrarse</string>
    <string name="btnRegistrarC">Registrarme</string>


    <!--Registro vendedor-->
    <string name="txtRegistrov">Registro de vendedor</string>
    <string name="etNombresV">Nombres Completos</string>
    <string name="etEmailv">Email</string>
    <string name="etPassword"> Password</string>
    <string name="etCpassword">Confirmar Password</string>
    <string name="btnRegistrarV">Registrarme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txtLoginV">Login de vendedor</string>
    <string name="btnLoginV">Ingresar</string>
    <string name="txtNoCuenta">¿No tienes una cuenta?</string>
    <string name="tvRegistraV">Registrarse</string>

    <!--Login Cliente-->
    <string name="txtLoginC">Login de cliente</string>
    <string name="etEmailC">Email</string>
    <string name="tvRegistraC">Registrarse</string>
    <!--PRODUCTOS-->
    <string name="txtAgregarProductos">Agregar Productos</string>

    <string name="etNombresp">Nombre del producto</string>
    <string name="etDescripcionp">Descripción</string>
    <string name="Categoriap">Categoría</string>
    <string name="etPreciop">Precio</string>"
    <string name="txtDescuentop">Descuento</string>
    <string name="etPrecioConDescuentop">Precio con descuento apli.</string>
    <string name="etNotaDescuentop">Ejm: 10% Desc.</string>
    <string name="btnAgregarProductop">AgregarProducto</string>

    <!--Agregar categorias-->
    <string name="etCategoria">Ingrese Categorias</string>
    <string name="btnAgregarCategoria">Agregar Categoria</string>

    <!--Item categorias Vendedor-->
    <string name="item_nombre_c_v">Nombre de categoria</string>
    <string name="item_nombre_c">Nombre de categoria</string>


    <!--Item Producto -->
    <string name="item_nombre_p">Nombre del producto</string>
    <string name="item_precio_p">00</string>"
    <string name="item_precio_p_desc">00</string>"
    <string name="items_nota_p">50% OFF</string>"

    <!--Registro con número telefonico-->
    <string name="txtLoginTelC">Login con teléfono</string>
    <string name="etTelefonoC">Teléfono </string>
    <string name="btnEviarCodigo">Enviar código</string>
    <string name="etCodVer">Código</string>
    <string name="btnVerificarCod">Verificar código</string>"
    <string name="tvReenviarCod">¿No llegó el código?. <b>Reenviar</b></string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>