<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">
        

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imagenP"
            android:src="@drawable/box_icon"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/item_nombre_p"
            android:text="@string/item_nombre_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="7dp"
            android:maxLines="1"/>

        <!--nota Descuento-->
        <TextView
            android:background="@drawable/fondo_verde"
            android:id="@+id/item_nota_p"
            android:padding="5dp"
            android:text="@string/items_nota_p"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/item_precio_p"
            android:text="@string/item_precio_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/item_precio_p_desc"
            android:text="@string/item_precio_p_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>