<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vendedor.Productos.AgregarProductoActivity">
<!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAgregarProductos"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#ccc"/>

    </RelativeLayout>
    <!--Icono agregar-->

    <RelativeLayout
        android:id="@+id/RLImagen"
        android:layout_below="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgAgregarProducto"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/add_products"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        
    </RelativeLayout>
    <!--Informacion de un producto-->

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/RLImagen"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Listar las imagenes de un producto-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RV_ImagenesProducto"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_imagenes_seleccionadas"
                app:spanCount="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


           <!--Nombres del producto-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_NombresP"
                android:layout_below="@+id/RV_ImagenesProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etNombresP"
                    android:inputType="textCapSentences"
                    android:hint="@string/etNombresp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Descripcion del producto-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Descripcion"
                android:layout_below="@+id/TIL_NombresP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etDescripcionP"
                    android:hint="@string/etDescripcionp"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Precio-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Precio"
                android:layout_below="@+id/TIL_Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etPrecioP"
                    android:hint="@string/etPreciop"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/descuentoSwitch"
                android:text="@string/txtDescuentop"
                android:layout_below="@id/TIL_Precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
            <!--Precio con descuento-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_PrecioDes"
                android:layout_below="@id/descuentoSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etPrecioConDescuentoP"
                    android:hint="@string/etPrecioConDescuentop"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Nota del descuent-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_NotaDesc"
                android:layout_below="@id/TIL_PrecioDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etNotaDescuentop"
                    android:inputType="textCapSentences"
                    android:hint="@string/etNotaDescuentop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                  />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAgregarProducto"
        android:text="@string/btnAgregarProductop"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:layout_margin="10dp"
        app:cornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>